引入百度地图,以useReducer useContext形成redux状态

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,13 @@
-*{
+// global css
+* {
     touch-action: pan-y;
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+}
+html,
+body,
+#root,
+.App {
+    height: 100%;
 }
