新增功能模块V0.6 找房功能，对顶部筛选做了封装组件等

--- a/src/components/Search/index.scss
+++ b/src/components/Search/index.scss
@@ -2,11 +2,12 @@
     position: absolute;
     top: 20px;
     width: 90%;
+    font-size: 12px;
     height: 40px;
     display: flex;
     left: 20px;
     .left {
-        background-color: #fff;
+        background-color: transparent;
         border-radius: 5px;
         display: flex;
         align-items: center;
@@ -28,5 +29,8 @@
         display: flex;
         align-items: center;
         margin-left: 15px;
+    }
+    .icon-colors {
+        color: #3fc28c;
     }
 }
