1.对找房模块的功能进一步完善,使用virtualize组件遇到一些问题,无限滚动加载时出不来数据 2.对顶部title做了通用吸顶公用组件 3.新增了更多模块的筛选条件功能

--- a/src/pages/HouseList/index.scss
+++ b/src/pages/HouseList/index.scss
@@ -1,6 +1,7 @@
 $commanColor: #f5f6f5;
 .main-list {
     background-color: #fff;
+    overflow:hidden;
     height: 100%;
     width: 100%;
     .header-list {
@@ -22,4 +23,10 @@ $commanColor: #f5f6f5;
         width: 82%;
         font-size: 12px;
     }
+}
+.loading{
+    line-height: 120px;
+    text-align: center;
+    height: 110px;
+    background-color: #f5f6f5;
 }
