修复title筛选的功能优化

--- a/src/pages/HouseList/index.scss
+++ b/src/pages/HouseList/index.scss
@@ -28,5 +28,6 @@ $commanColor: #f5f6f5;
     line-height: 120px;
     text-align: center;
     height: 110px;
+    color:red;
     background-color: #f5f6f5;
 }
