--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,12 @@ body,
 .App {
     height: 100%;
 }
+.mask {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    background: rgba(0, 0, 0, 0.4);
+}
